# video-arena

./: .gitignore  README.md  ai_api_client.py  arena.py  corruption.py  dashboard.py  input_builders.py  judge.py  logger.py  main.py  model_config.json  models.py  orchestrator.py  process.py  pyproject.toml  requirements.txt  video_gen.py
config/: constants.py  genai_client.py  openai_client.py
examples/: decomposition_usage.py
prompts/: aesthetic_quality.txt  decompose.txt  prompt_alignment.txt  technical_quality.txt  temporal_consistency.txt  video_gen_prompts.txt
scripts/: rocketship.sh
tests/: test_arena.py  test_cli.py  test_judge.py  test_models.py  test_orchestrator.py  test_process.py  test_video_gen.py
tests/utils/: test_calculate.py  test_format.py
utils/: file_utils.py  gemini.py  llm_utils.py
video_judge/: __init__.py  arena.py  cli.py  decomposer.py  input_builders.py  judge.py  models.py  orchestrator.py  process.py  video_gen.py
video_judge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
video_judge/utils/: calculate.py  file_utils.py  format.py
